syntax = "proto3";
package com.subscriptionmanager;
option java_multiple_files = true;
option  java_package = "com.subscriptionserver.proto";

message NewsletterDetails{
  string id = 1;
  string title = 2;
  int32 price = 3;
  int32 validity = 4;
  string genre = 5;
}
message Subscription{
  string id = 1;
  string newsletterId = 2;
  string username = 3;
  string validityDate = 4;
}